temporary patch, navigation width/overflow issue

--- a/drupal/sites/all/themes/checkdesk/assets/scss/_navigation.scss
+++ b/drupal/sites/all/themes/checkdesk/assets/scss/_navigation.scss
@@ -58,12 +58,15 @@ li.menu-477 {
 
 // Outer nav wrapper 
 #navbar {
-  background: $nav-container-bkg-color;
+  
 }
 
 // This nav contains two rows of nav-items with icons.
 nav[role="navigation"] {
-  @include clearfix;
+  background: $nav-container-bkg-color;
+  float: $from-direction;
+  width: 90%; // TEMPORARY
+
 
   // Apply nav icons
   // Warning: The line height must remain more than the icons' generated height.
